--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ article {
 #project1{
 	background-image: url("https://blog-photos.dogvacay.com/wp-content/uploads/2012/10/dog-lobster-halloween-costume.jpeg");
     background-repeat: no-repeat;
-    width: auto;
     height: auto;
     background-size: cover;
     background-position: center;
@@ -97,7 +96,6 @@ article {
 #project2{
 	background-image: url("https://blog-photos.dogvacay.com/wp-content/uploads/2012/10/dog-lobster-halloween-costume.jpeg");
     background-repeat: no-repeat;
-    width: auto;
     height: auto;
     background-size: cover;
     background-position: center;
@@ -105,7 +103,6 @@ article {
 #project3{
 	background-image: url("https://blog-photos.dogvacay.com/wp-content/uploads/2012/10/dog-lobster-halloween-costume.jpeg");
     background-repeat: no-repeat;
-    width: auto;
     height: auto;
     background-size: cover;
     background-position: center;
@@ -113,7 +110,6 @@ article {
 #project4{
 	background-image: url("https://blog-photos.dogvacay.com/wp-content/uploads/2012/10/dog-lobster-halloween-costume.jpeg");
     background-repeat: no-repeat;
-    width: auto;
     height: auto;
     background-size: cover;
     background-position: center;
